# continuumbench-experiments

./: .gitignore  Makefile  README.md  continuumbench_relbench.py  continuumbench_tabfm_run.py  graphbench_run.py  pyproject.toml  relbench_run.py
docs/: paper_results_structural_proxy_template.tex
scripts/: collect_sweep_results.py  inspect_continuumbench_views.py  rt_homecredit_prep.py  run_local_experiments.sh  run_local_homecredit_tabpfn.sh  run_snellius_continuumbench.sh  run_tabred_homecredit_tabpfn.sh  setup_snellius_env.sh  snellius_homecredit_a100.sbatch  snellius_homecredit_rgcn_a100.sbatch  snellius_homecredit_rt_a100.sbatch  snellius_homecredit_tabpfn_a100.sbatch  snellius_rt_only_a100.sbatch  snellius_tabpfn_a100.sbatch  snellius_tabred_homecredit_tabpfn_a100.sbatch  snellius_tabred_homecredit_tabpfn_array.sbatch  stage_homecredit_csvs.sh  submit_snellius_homecredit.sh  submit_snellius_homecredit_rgcn.sh  submit_snellius_homecredit_rt.sh  submit_snellius_homecredit_tabpfn.sh  submit_snellius_rt_only.sh  submit_snellius_tabred_homecredit_tabpfn.sh  submit_snellius_tabred_homecredit_tabpfn_sweep.sh  submit_snellius_tabular.sh
src/: graphbench_adapter.py  graphbench_experiment.py  model.py  relbench_experiment.py
src/continuumbench_experiments/: __init__.py  tabred_homecredit_tabpfn.py
src/continuumbench_experiments/cli/: __init__.py  continuumbench.py
tests/: test_continuumbench_cli.py  test_continuumbench_harness.py  test_continuumbench_relbench.py  test_graphbench_adapter.py  test_graphbench_experiment.py  test_models_adapters.py  test_models_device_resolution.py  test_models_tabular.py  test_relbench_experiment.py  test_sources_homecredit.py  test_tabred_homecredit_tabpfn.py
(+20 files in other folders)
