[project]
name = "continuumbench-experiments"
version = "0.1.0"
description = "Standalone ContinuumBench harness and tabular-model runner."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "pyarrow",
    "torch",
    "tabicl",
    "tabpfn",
]

[project.optional-dependencies]
dev = ["pytest"]
task-source = ["relbench>=2.1.1"]
xgboost = ["xgboost>=2.0"]
gnn = ["torch-geometric>=2.5"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/continuumbench_experiments/continuumbench/harness.py" = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
